--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,138 @@
-.gallery {
+li {
+  list-style-type: none;
 }
 
+.container {
+  margin-top: 20px;
+  padding: 0 5px;
+  position: relative;
+}
+
+.stats {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.stats:hover {
+  cursor: pointer;
+}
+
+.stats-item {
+  color: rgb(206, 204, 204);
+}
+
+.stats-item:hover {
+  cursor: pointer;
+  color: rgb(1, 206, 127);
+}
+
+.material-icons {
+  opacity: 0.7;
+}
+
+.material-icons:hover {
+  opacity: 1;
+  color: rgb(1, 206, 127);
+}
 .list-elem {
+  padding: 10px;
+  max-width: 100%;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.small-pic {
+  width: 400px;
+  border-radius: 20px;
   border: 1px solid;
-  max-width: 100px;
+  border-color: rgb(1, 206, 127);
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+}
+
+.small-pic:hover {
+  transform: scale(1.01);
+  cursor: pointer;
+}
+
+.search-form {
+  position: relative;
+}
+
+.input {
+  width: 400px;
+  height: 30px;
+  border: 2px solid;
+  border-radius: 10px;
+  border-color: rgb(1, 206, 127);
+  margin-left: 100px;
+  background-color: rgb(241, 240, 240);
+  font-size: 18px;
+  font-family: "Quicksand", sans-serif;
+  color: rgb(1, 206, 127);
+  padding-left: 20px;
+}
+
+.input::placeholder {
+  color: rgb(1, 206, 127);
+}
+.input:hover::placeholder {
+  font-family: "Quicksand", sans-serif;
+  color: white;
+}
+
+.input-btn {
+  margin-left: 5px;
+  width: 100px;
+  height: 35px;
+  border-radius: 10px;
+  border: 2px solid;
+  border-color: rgb(1, 206, 127);
+  color: rgb(1, 206, 127);
+  font-size: 18px;
+  font-family: "Quicksand", sans-serif;
+}
+
+.more {
+  margin-left: 47%;
+}
+
+.input-btn:hover {
+  cursor: pointer;
+  border-color: mediumspringgreen;
+  color: white;
+  background-color: rgb(206, 204, 204);
+}
+
+.input:hover {
+  background-color: rgb(206, 204, 204);
+  border-color: rgb(1, 206, 127);
+}
+
+.search-form::before {
+  border: 2px solid;
+  border-radius: 10px;
+  border-color: rgb(1, 206, 127);
+  left: 60px;
+  position: absolute;
+  content: "";
+  background-color: rgb(1, 206, 127);
+  width: 31px;
+  height: 31px;
+  transform: rotate(-360deg);
+  transition: 5s;
+}
+
+.search-form:hover:before {
+  cursor: pointer;
+  background-color: rgb(206, 204, 204);
+  transform: rotate(360deg);
+  transition: 5s;
+}
+
+.is-hidden {
+  opacity: 0;
 }
