--- a/src/galeryList.hbs
+++ b/src/galeryList.hbs
@@ -1,7 +1,7 @@
 {{#each this}}
 <li class="list-elem">
     <div class="photo-card">
-        <img class="small-pic" src="{{webformatURL}}" alt="{{largeImageURL}}" />
+        <img class="image" src="{{webformatURL}}" alt="{{tags}}" data-source="{{largeImageURL}}" />
         <div class="stats">
             <p class="stats-item">
                 <i class="material-icons">thumb_up</i>
