--- a/src/styles.css
+++ b/src/styles.css
@@ -44,7 +44,7 @@ li {
   flex-wrap: wrap;
 }
 
-.small-pic {
+.image {
   width: 400px;
   border-radius: 20px;
   border: 1px solid;
@@ -53,7 +53,7 @@ li {
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
 }
 
-.small-pic:hover {
+.image:hover {
   transform: scale(1.01);
   cursor: pointer;
 }
